src/test/deca/context/valid/class/9_declMethodSansParam.deca
/* Description:
     tester class qui possede de method sans Param

    Historique:
      cree le 08/01/2020
*/

   class A {
    int x;
    int getX (){
        x + 2;
    }


   }
